[OpenNeuro] Recorded changes

--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,4 @@
 Revision history for your dataset
 
-1.0.0 2023-09-27
- - Initialized study directory
- 
+1.0.0 2023-10-25
+  - First submitted version
